<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="mx.gob.jalisco.edu.consultaescolar.fragments.GeneralData">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/personal_data_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:paddingBottom="80dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dom"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textSize="30dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos_generales_subtitle"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/calle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/PrimaryText"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColorHint="@color/PrimaryText"
                        android:hint="@string/calle"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/numero_exterior"
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/PrimaryText"
                        android:inputType="number"
                        android:textColorHint="@color/PrimaryText"
                        android:hint="@string/numero_exterior"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/numero_interior"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:layout_marginBottom="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/PrimaryText"
                        android:inputType="text"
                        android:textColorHint="@color/PrimaryText"
                        android:hint="@string/numero_interior"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/entre_calle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/PrimaryText"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColorHint="@color/PrimaryText"
                        android:hint="@string/entre_calle"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/y_calle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/PrimaryText"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColorHint="@color/PrimaryText"
                        android:hint="@string/y_calle"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/c_postal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/PrimaryText"
                        android:inputType="number"
                        android:padding="8dp"
                        android:textColorHint="@color/PrimaryText"
                        android:hint="@string/c_postal"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/colonia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/PrimaryText"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColorHint="@color/PrimaryText"
                        android:hint="@string/colonia"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:layout_marginBottom="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/municipio"
                    android:textSize="17dp"
                    android:textColor="#6e6e6e"
                    android:layout_marginTop="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/municipios"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/title"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:background="@drawable/spinner_background"
                        android:layout_marginBottom="30dp"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.1"
                        android:tint="@color/colorAccent"
                        android:layout_marginLeft="-40dp"
                        android:src="@drawable/ic_arrow_drop_down"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/error_mun"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Campo requerido"
                    android:textSize="14dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@android:color/holo_red_light"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
